# aleph-omega

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
haskell-core/: .gitignore  aleph-omega.cabal
haskell-core/src/AlephOmega/: Compiler.hs  GraphTheorems.hs  GraphTheory.hs  Proofs.hs  Theorems.hs  Types.hs  VectorSpace.hs
haskell-core/test/: Spec.hs
kinf-vm/: .gitignore  Cargo.toml
kinf-vm/examples/: simple.rs
kinf-vm/src/: lib.rs  opcode.rs  vm.rs
