cabal-version:      3.0
name:               aleph-omega
version:            0.1.0.0
license:            MIT
author:             DK
build-type:         Simple

library
    exposed-modules:  AlephOmega.Types
    build-depends:    base >= 4.17
                    , containers >= 0.6
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-depends:    base, aleph-omega
    default-language: Haskell2010
