cabal-version: 2.2
name:           aleph-omega
version:        0.1.0.0
description:    Aleph-Omega Kernel formal foundation
homepage:       https://github.com/Gutkaq/aleph-omega#readme
bug-reports:    https://github.com/Gutkaq/aleph-omega/issues
author:         Aleph Omega Team
maintainer:     example@example.com
copyright:      2025 Aleph Omega Team
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/Gutkaq/aleph-omega

library
  exposed-modules:
      AlephOmega.Types
      , AlephOmega.Theorems
      , AlephOmega.VectorSpace
      , AlephOmega.Compiler
      , AlephOmega.Proofs
  other-modules:
      Paths_aleph_omega
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -Wno-type-defaults
  build-depends:
      base >=4.7 && <5
    , containers >=0.6
    , vector >=0.12
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_aleph_omega
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N -Wno-type-defaults
  build-depends:
      aleph-omega
    , base >=4.7 && <5
    , containers >=0.6
    , vector >=0.12
  default-language: Haskell2010

